# first_rust_backend

./: .env  .gitignore  Cargo.toml
migrations/2025-11-16-063039-0000_create_users/: up.sql
migrations/2025-11-16-063612-0000_create_messages/: down.sql  up.sql
migrations/2025-11-16-070625-0000_add_default_to_users_created_at/: down.sql  up.sql
migrations/2025-11-16-103000-0000_add_identity_to_users_id/: down.sql  up.sql
migrations/2025-11-18-165334-0000_add_new_users_table/: down.sql  up.sql
src/: db.rs  lib.rs  main.rs  models.rs  schema.rs
src/handlers/: create_user.rs  delete_user.rs  get_all_users.rs  get_user_by_id.rs  mod.rs  update_user.rs
src/models/: users_model.rs
