[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
diesel = { version = "2.2.0", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
r2d2 = "0.8"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["std"] }
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = []